syntax = "proto3";
package contactical.reality.v1;

option go_package = "contactical/x/reality/types";

// Claim defines the Claim message.
message Claim {
  uint64 id = 1;
  string sensor_hash = 2;
  string gnss_hash = 3;
  string anchor_signature = 4;
  string creator = 5;
  string trust_level = 6;  // 신뢰도 등급 추가
  // [수정] bytes -> string (Base64 호환성)
  string data_signature = 7; // 필드 번호가 다를 수 있으니 본인 파일에 맞춰 추가/수정하세요
}
